# text2file

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.txt  check_excel.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_excel.xlsx  test_excel_formats.sh  test_excel_gen.py  test_imports.py  test_validators.py  text2file  text2file.py  text2file.sh  text2file_wrapper  text2file_wrapper_final  text2file_wrapper_fixed  text2file_wrapper_new
.github/workflows/: ci.yml  publish.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _queue.data.json  _queue.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  _struct.data.json  _struct.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  (+94 more)
.mypy_cache/3.12/PIL/: GimpPaletteFile.data.json  GimpPaletteFile.meta.json  TiffTags.data.json  TiffTags.meta.json  _imaging.data.json  _imaging.meta.json  _version.data.json  _version.meta.json
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/asyncio/: coroutines.data.json  coroutines.meta.json  exceptions.data.json  exceptions.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json
.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/concurrent/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/ctypes/: __init__.data.json  __init__.meta.json  _endian.data.json  _endian.meta.json
.mypy_cache/3.12/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.12/importlib/: __init__.data.json  __init__.meta.json  _abc.data.json  _abc.meta.json  _bootstrap.data.json  _bootstrap.meta.json  _bootstrap_external.data.json  _bootstrap_external.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  readers.data.json  readers.meta.json
.mypy_cache/3.12/multiprocessing/: connection.data.json  connection.meta.json  pool.data.json  pool.meta.json  process.data.json  process.meta.json  queues.data.json  queues.meta.json  shared_memory.data.json  shared_memory.meta.json  spawn.data.json  spawn.meta.json
.mypy_cache/3.12/numpy/: __config__.data.json  __config__.meta.json  _expired_attrs_2_0.data.json  _expired_attrs_2_0.meta.json  _globals.data.json  _globals.meta.json  _pytesttester.data.json  _pytesttester.meta.json  exceptions.data.json  exceptions.meta.json  version.data.json  version.meta.json
.mypy_cache/3.12/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.12/packaging/: __init__.data.json  (+5 more)
samples/: test.txt
scripts/: list_extensions.py
src/text2file/: __init__.py  __main__.py  cli.py
test_output/: basic_data.csv  finances.csv  medium_data.csv  products.csv  simple_data.csv  test_excel.xlsx  test_excel_20250626_085555.xlsx
tests/: conftest.py  test_config_generator.py  test_excel.py  test_text2file.py  test_validators.py  test_video_generator.py
tests/scripts/: test_generators.py  test_list.py
(+83 files in other folders)
