[tool.poetry]
name = "text2file"
version = "0.1.0"
description = "A utility to generate test files in various formats from text content"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "text2file", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^10.0.0"
fpdf2 = "^2.8.3"
python-docx = "^1.0.0"
openpyxl = "^3.1.0"
click = "^8.1.3"
moviepy = { version = "^1.0.3", optional = true }
numpy = { version = "^1.24.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
types-Pillow = "^10.2.0"
types-PyYAML = "^6.0.12"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-v --cov=text2file --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
