[tool.poetry]
name = "text2file"
version = "0.1.6"
description = "A utility to generate test files in various formats from text content"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "text2file", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = { version = "^10.0.0", optional = true }
fpdf2 = { version = "^2.8.3", optional = true }
python-docx = { version = "^1.0.0", optional = true }
openpyxl = { version = "^3.1.0", optional = true }
click = "^8.1.3"
moviepy = { version = "^1.0.3", optional = true }
numpy = { version = "^1.24.0", optional = true }
rich = "^14.0.0"
PyYAML = "^6.0.1"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
# Development dependencies are now specified in the [tool.poetry.extras] section

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-v --cov=text2file --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
