[tool.poetry]
name = "text2file"
version = "0.1.16"
description = "A utility to generate test files in various formats from text content"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "text2file", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^14.0.0"
PyYAML = "^6.0.1"
tomli = { version = "^2.0.1", python = "<3.11" }

# Optional dependencies
Pillow = { version = "^10.0.0", optional = true }
fpdf2 = { version = "^2.8.3", optional = true }
python-docx = { version = "^1.0.0", optional = true }
openpyxl = { version = "^3.1.0", optional = true }

# Video-related dependencies
moviepy = { version = "^1.0.3", optional = true }
numpy = { version = "^1.24.0", optional = true }
opencv-python = { version = "^4.8.0", optional = true }

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# Optional feature groups
video = ["opencv-python", "numpy", "Pillow", "moviepy"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-v --cov=text2file --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
